better definition of focused OMS

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1310,7 +1310,7 @@ There are also general purpose OMS languages, which can express both \termref{OM
 {\termref{OMS} that results from other (basic and structured) \termref{OMS} by \termref{import}, \termref{union}, \termref{combination}, \termref{renaming} or other structuring operations}
 
 \termdefinition{focused OMS}
-{\termref{OMS} that has a single resulting \termref{logical theory}.}
+{\termref{OMS} that has a single \emph{signature} and model class (or \termref{logical theory}) over that signature as its semantics}
 \begin{note}
 A focused OMS is either a basic or structured OMS.
 \end{note}
