--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -522,7 +522,7 @@ Copyright \copyright 2008, company name \\
 
 
 
-\OMGparagraph {USE OF SPECIFICATION - TERMS, CONDITIONS \& NOTICES}
+\OMGparagraph{USE OF SPECIFICATION - TERMS, CONDITIONS \& NOTICES}
 The material in this document details an Object Management Group specification
  in accordance with the terms, conditions and notices set forth below. This
   document does not represent a commitment to implement any portion of this
@@ -735,6 +735,31 @@ In complex applications, which involve multiple OMS with overlapping concept spa
   It specifies DOL (Distributed Ontology, Modeling and Specification Language), a formal language for expressing not only OMS but also mappings between OMS formalized in different OMS languages.\ednote{Is the plural of OMS just ``OMS'' or ``OMS'''?}
 
 Thus, DOL gives interoperability a formal grounding and makes heterogeneous OMS and services based on them amenable to checking of coherence (\eg consistency, conservativity, intended consequences, and compliance).
+
+%\ednote{this could be put in section 1 (if possible with OMG), or turned into informative
+%  notes, or deleted}
+%An ontology is a formal description of the concepts and relationships
+%that are of interest to an agent or a community of agents. Today,
+%ontologies are applied in eBusiness, eHealth, eGovernment, eInclusion,
+%eLearning, smart environments, ambient assisted living (AAL), and
+%virtually all other information-rich endeavours. Ontologies have been
+%used initially and principally for data and database integration
+%through providing a common representation of the subject domain onto
+%which the data sources can be mapped meaningfully. Over the years, the
+%purpose has broadened beyond data and services interoperability to
+%include a wide range of tasks and ontologies are used in information
+%systems at run-time, such as being a component in \emph{in silico}
+%scientific workflows, used for natural language processing, in
+%ontology-driven querying of digital libraries, user profiling in
+%recommender systems, adaptive e-Learning tools, and
+%more.\todonote[author=Terry
+%Longstreth,date=D:201110060000+02'00']{Terry Longstreth:
+%  Interoperability in this context seems to be mutual consistency?
+%  Fostering Mutual Consistency among disjoint ontological formalisms
+%  (intensions) and their realisations (extensions). TM: yes, but more
+%  than that: also interfacability, such that the joint use in a common
+%  application scenario is enabled.}
+
 
 
 \ednote{State somewhere: A DOL theory is at level M1 in MDA speak, the same level as an UML diagram. Also a DOL distributed OMS, containing interpretations, alignments between OMS etc. is at level M1. The specification of DOL  lives at M2, like the UML specification. Both are written in MOF.}
@@ -1831,37 +1856,34 @@ As listed below, these symbols and abbreviations are generally for the main clau
 
 
 \chapter{Additional Information}
+\section{Changes to Adopted OMG Specifications}
+This specification does not require or request any change to any other OMG specification. 
+
+\section{How to Read this Specification}
+
+\section{About this Specification}
+
+\section{Acknowledgments}
+\subsection{Submitting and supporting organizations}
+The following  OMG  submitted and/or supported parts of this specification:
+	\begin{itemize}
+		\item 
+	\end{itemize}
+
+\subsection{Participants}
+The following people contributed directly to the development of this specification. 
+
+	\begin{itemize}
+		\item 
+	\end{itemize}
+	
+
+%\section{Proof of Concept}
 
 
-\ednote{have a look at ODM's Additional Information}
-\ednote{this could be put in section 1 (if possible with OMG), or turned into informative
-  notes, or deleted}
-\ednote{this is only about ontologies, generalize to OMS}
-
-An ontology is a formal description of the concepts and relationships
-that are of interest to an agent or a community of agents. Today,
-ontologies are applied in eBusiness, eHealth, eGovernment, eInclusion,
-eLearning, smart environments, ambient assisted living (AAL), and
-virtually all other information-rich endeavours. Ontologies have been
-used initially and principally for data and database integration
-through providing a common representation of the subject domain onto
-which the data sources can be mapped meaningfully. Over the years, the
-purpose has broadened beyond data and services interoperability to
-include a wide range of tasks and ontologies are used in information
-systems at run-time, such as being a component in \emph{in silico}
-scientific workflows, used for natural language processing, in
-ontology-driven querying of digital libraries, user profiling in
-recommender systems, adaptive e-Learning tools, and
-more.\todonote[author=Terry
-Longstreth,date=D:201110060000+02'00']{Terry Longstreth:
-  Interoperability in this context seems to be mutual consistency?
-  Fostering Mutual Consistency among disjoint ontological formalisms
-  (intensions) and their realisations (extensions). TM: yes, but more
-  than that: also interfacability, such that the joint use in a common
-  application scenario is enabled.}
 
 
-[This page is left intentionally blank.]
+
 
 %%%%%%%%%%%%%%%% 
 %%%%%%%%%%%%%%%% 
